# microserv-llm

./: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  loadbalancer.yaml  service.yaml
src/: main.py  model_service.py
tests/: test_main.py  test_model_service.py
