[project]
name = "microservicio-sentimiento-llm"
version = "0.1.0"
description = "Microservicio de análisis de sentimiento utilizando DestilBERT"
authors = [
    {name = "Ben Kutz",email = "metalkutz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "microservicio_sentimiento_llm", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
