[project]
name = "microservicio-sentimiento-llm"
version = "0.1.0"
description = "Microservicio de análisis de sentimiento utilizando DestilBERT"
authors = [
    {name = "Ben Kutz",email = "metalkutz@gmail.com"}
]
readme = "README.md"
packages = [{include = "src"}]

requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "transformers (>=4.53.3,<5.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2,<9.0.0"
pytest-asyncio = ">=1.1.0,<2.0.0"
httpx = ">=0.27.0,<1.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
